when equals is pushed, start a new equation